<resources>
    <string name="app_name">Quizlett</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_img_description">Welcome image</string>
    <string name="profile_img_description">User profile image</string>
    <string name="welcome_title">The best way to study\nSign up for free</string>
    <string name="welcome_btn_text">SIGN UP WITH EMAIL</string>
    <string name="signUn_btn_text">SIGN UP</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="link_to_signIn">Sign in</string>
    <string name="already_had_account">Already had an account</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="sign_up_title">Create new account</string>
    <string name="sign_in_title">Welcome back</string>
    <string name="signIn_btn_text">SIGN IN</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="fullname_hint">Full Name</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="enter_email">Enter your email</string>
    <string name="reset_password">Reset password</string>
    <string name="email_sent_success">Check your email for reset password instruction</string>
    <string name="email_sent_error">Error while sending reset password email</string>
    <string name="signIn_error">Error while signing in</string>
    <string name="signUp_error">Error while signing up</string>
    <string name="signUp_success">Sign up successfully</string>
    <string name="welcome_back">Welcome back</string>
    <string name="btn_signout_text">SIGN OUT</string>
    <string name="btn_delete_account_text">DELETE ACCOUNT</string>
    <string name="signout_error">Error while signing out</string>
    <string name="delete_account_error">Error while delete account</string>
    <string-array name="answer_options_array">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
    </string-array>
    <string-array name="lesson_category_array">
        <item>Sciences</item>
        <item>Humanities</item>
        <item>Others</item>
    </string-array>
    <string name="category_sciences">Sciences</string>
    <string name="category_humanities">Humanities</string>
    <string name="category_others">Others</string>
    <string-array name="language_options_array">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string name="question_text_placeholder">Question Text</string>
    <string name="answer_options_placeholder">Answer Options: %s</string>
    <string name="correct_answer_placeholder">Correct Answer: %s</string>
    <string name="correct_answer_not_set">Correct answer not set</string>
    <string name="question_list_title">Manage Questions</string>
    <string name="ques_category_label">Category</string>
    <string name="question_detail_title">Edit your question</string>
    <string name="query_hint_search">Search...</string>
    <string name="question_text_label">Question Text</string>
    <string name="enter_question_text_hint">Enter the question text</string>
    <string name="answer_options_label">Answer Options</string>
    <string name="option_1_hint">Option 1</string>
    <string name="option_2_hint">Option 2</string>
    <string name="option_3_hint">Option 3</string>
    <string name="option_4_hint">Option 4</string>
    <string name="correct_answer_label">Correct Answer</string>
    <string name="save_question_button">Save</string>
    <string name="delete_question_button">Delete</string>
    <string name="fab_add_question_description">Add new question</string>
    <string name="manage_questions_button_text">Manage question</string>
    <string name="home_title">Home</string>
    <string name="top_lesson_title">Top lessons</string>
    <string name="try_flashcard_sets">Try out these flashcard sets</string>
    <string name="questions_count">%d questions</string>
    <string name="question_singular">%d question</string>
    <string name="english_lesson_title">English</string>
    <string name="chinese_lesson_title">Chinese</string>
    <string name="japanese_lesson_title">Japanese</string>
    <string name="lesson_list_title">Manage Lessons</string>
    <string name="lesson_text_placeholder">Lesson Title</string>
    <string name="category_placeholder">Category: %s</string>
    <string name="number_visit_placeholder">Number Of Visits: %s</string>
    <string name="number_question_placeholder">Number Of Questions: %s</string>
    <string name="last_visited_placeholder">Last Visited: %s</string>
    <string name="fab_add_lesson_description">Add new lesson</string>
    <string name="lesson_title_input">Enter Lesson Title</string>
    <string name="lesson_detail">Lesson Detail</string>
    <string name="manual_mode">Manual</string>
    <string name="auto_mode">Auto</string>
    <string name="num_of_ques">Number of Questions</string>
    <string name="select_ques_btn">Select Questions</string>
    <string name="save_lesson_btn">Save</string>
    <string name="delete_lesson_btn">Delete</string>
    <string name="done_btn">SAVE</string>
    <string name="lesson_title_label">Lesson Title</string>
    <string name="lesson_ques_label">Questions</string>
    <string name="lesson_numques_label">Number Question</string>
    <string name="lesson_create_mode_label">Creation Mode</string>
    <string name="lesson_category_label">Category</string>
    <string name="create_test">TEST</string>
    <string name="setup_test">Setup your test</string>
    <string name="question_count">Number of questions</string>
    <string name="test_method">Test method</string>
    <string name="multiple_choice_hint">Choose 1 correct answer out of 4</string>
    <string name="tf_hint">Choose between True &amp; False</string>
    <string name="start_test">START TEST</string>
    <string name="search_lesson">Search lessons...</string>
    <string name="my_folders">My Folders</string>
    <string name="my_library">My Library</string>
    <string name="select_folder">Select Folder</string>
    <string name="add_folder">Add Folder</string>
    <string name="folder_name_cannot_be_empty">Folder name cannot be empty</string>
    <string name="create_folder_dialog_title">Create New Folder</string>
    <string name="folder_detail">Folder Detail</string>
    <string name="folder_deleted_success">Folder deleted successfully</string>
    <string name="delete_folder_title">Delete folder</string>
    <string name="delete_folder_message">Are you sure you want to delete this folder? Lessons will not be deleted.</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="remove_lesson_from_folder_title">Remove Lesson</string>
    <string name="remove_lesson_confirm">Remove this lesson from folder?</string>
    <string name="remove_lesson_success">Lesson removed from folder</string>
    <string name="remove_lesson_failed">Failed to remove lesson</string>
    <string name="items_suffix">items</string>
    <string name="save_lesson_success">Lesson saved successfully!</string>
    <string name="save_lesson_error">Error saving lesson. Please try again.</string>
    <string name="create_folder_success">Folder created successfully!</string>
    <string name="create_folder_error">System error while creating folder. Please try again.</string>
    <string name="open_dialog_error">System error when opening dialog.</string>
    <string name="folder_not_found">Folder does not exist or has been deleted.</string>
    <string name="folder_load_failed">Unable to load folder information.</string>
    <string name="language_saved_success">Language settings saved successfully! Restarting...</string>
    <string name="language_saved_error">Error saving language settings.</string>
    <string name="do_not_click_yet">Don\'t click yet, not finished</string>
    <string name="value_cannot_empty">Value cannot be empty!</string>
    <string name="current_password_required">Current password is required for security!</string>
    <string name="operation_successful">Operation successful!</string>
    <string name="error_getting_data">Error when getting data.</string>
    <string name="error_loading_lessons">Error loading lessons: %s</string>
    <string name="opening_lesson">Opening: %s</string>
    <string name="result_your_answer">Your answer: %1$s</string>
    <string name="result_correct_answer">Correct answer: %1$s</string>
    <string name="close">Close</string>
    <string name="tf_answer_hint">Answer: %1$s</string>
    <string name="tf_truth_label_true">True (Answer: %1$s)</string>
    <string name="tf_truth_label_false">False (Correct: %1$s)</string>

</resources>

