<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpFragment">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            app:backgroundTint="@null"
            android:background="@drawable/back_ic"
            android:rotation="180"/>

        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/backBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/sign_up_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signUpTitle"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/input_field_bg"
            android:paddingHorizontal="20dp"
            android:hint="@string/email_hint"
            android:textColorHint="@color/light_grey"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/input_field_bg"
            android:paddingHorizontal="20dp"
            android:hint="@string/password_hint"
            android:textColorHint="@color/light_grey"/>

        <EditText
            android:id="@+id/etFullname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/input_field_bg"
            android:paddingHorizontal="20dp"
            android:hint="@string/fullname_hint"
            android:textColorHint="@color/light_grey"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/etFullname"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="100dp"
            app:backgroundTint="@null"
            android:background="@drawable/primary_btn_bg"
            android:text="@string/signUn_btn_text"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/linkToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/already_had_account"
            android:textColor="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
