<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.welcome.WelcomeFragment"
        android:theme="@style/Theme.Quizlett">

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="120dp"
            android:background="@drawable/circle_bg"
            android:src="@drawable/welcome_img"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/welcome_img_description"/>

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/welcomeImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintTop_toBottomOf="@id/welcomeTitle"
            android:layout_marginTop="180dp"
            android:layout_marginHorizontal="50dp"
            app:backgroundTint="@null"
            android:background="@drawable/primary_btn_bg"
            android:text="@string/welcome_btn_text"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/haveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/linkToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_to_signIn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingStart="5dp"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:constraint_referenced_ids="haveAnAccount, linkToSignIn"
            android:background="@android:color/transparent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
