<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.forgotpassword.ForgotPasswordFragment">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            app:backgroundTint="@null"
            android:background="@drawable/back_ic"
            android:rotation="180"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp"
            android:layout_marginStart="30dp"
            android:text="@string/enter_email"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/input_field_bg"
            android:paddingHorizontal="20dp"
            android:hint="@string/email_hint"
            android:textColorHint="@color/light_grey"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="100dp"
            app:backgroundTint="@null"
            android:background="@drawable/primary_btn_bg"
            android:text="@string/reset_password"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>