<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.firsttab.test.CreateTestFragment">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            app:backgroundTint="@null"
            android:background="@drawable/ic_cancel"
            android:rotation="180" />

        <ImageView
            android:id="@+id/iv_creator_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="creator_image"
            android:src="@drawable/error_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            style="@style/RoundedSquareImageViewStyle"/>

        <TextView
            android:id="@+id/tv_lesson_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Toan hoc 101"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_setup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/setup_test"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lesson_title"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_grey"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_setup_title"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_count"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"/>

        <NumberPicker
            android:id="@+id/count_picker"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/number_picker_background"
            android:theme="@style/NumberPickerStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/test_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_method"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/count_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"/>

        <Spinner
            android:id="@+id/test_method_picker"
            android:layout_width="wrap_content"
            android:minWidth="140dp"
            android:layout_height="wrap_content"
            android:entries="@array/test_methods"
            android:background="@drawable/spinner_background"
            android:popupBackground="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/count_picker"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_grey"
            android:text="@string/tf_hint"
            app:layout_constraintTop_toBottomOf="@id/test_method"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="30dp"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/ConfirmButtonStyle"
            android:layout_margin="30dp"
            android:text="@string/start_test"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
